Icon Mobile Fixes

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -118,10 +118,11 @@ header.banner h1 {
     font-size: 3rem;
   }
   .features-icons .features-icons-item .features-icons-icon i {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
+    margin-left: 6rem;
   }
   .features-icons .features-icons-item .features-icons-icon .features-icons .features-icons-item:hover .features-icons-icon i {
-    font-size: 4.5rem;
+    font-size: 5.5rem;
   }
 }
 
