--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -31,10 +31,11 @@
   }
   .features-icons .features-icons-item .features-icons-icon {
     i {
-      font-size: 2.5rem;
+      font-size: 3.5rem;
+      margin-left:6rem;
     }
     .features-icons .features-icons-item:hover .features-icons-icon i {
-      font-size: 4.5rem;
+      font-size: 5.5rem;
     }
   }
 }
